--- a/code/Dami_RFC_Final.ipynb
+++ b/code/Dami_RFC_Final.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Dami_RFC_DataUderstandingAndPrep_Final.ipynb",
+      "name": "Dami_RFC_Final.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -1451,6 +1451,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uy2eGOxm3HI6"
+      },
+      "source": [
+        "Untuk mempermudah pemrosesan data, maka dilakukan pengubahan jenis nilai yang digunakan pada fitur `jkpst`. Sebelumnya fitur `jkpst` bertipe kategorik dan menggunakan nilai L dan P untuk mendefinisikan jenis kelamin pasien. Karena itu, kami mengubah nilai fitur ini dengan nilai biner sehingga menjadi [0, 1] dimana 0 = L dan 1 = P."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "2uLB6_PFSFhc"
@@ -1460,6 +1469,24 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0i79YJYt3M0q"
+      },
+      "source": [
+        "Pada tahap data understanding dilakukan pengecekan tipe atribut dari setiap fitur pada data. Dapat dilihat bahwa, terdapat 4 atribut yang bertipe data kategorikal (object64), untuk itu perlu dilakukan transformasi data. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iaKcF2iO3rQa"
+      },
+      "source": [
+        "Fitur dengan tipe kategorikal akan dikumpulkan lalu dipetakan dalam data dummies untuk kemudian ditransformasi menjadi tipe numerik. Kemudian fitur yang sudah diubah, diconcatenate/ digabungkan pada variabel yang bernama bpjs_data_final dengan axis=1."
+      ]
     },
     {
       "cell_type": "code",
@@ -1515,6 +1542,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mpHIvABY33Ys"
+      },
+      "source": [
+        "Selanjutnya, dilakukan pengecekan kebersihan data. Data cleaning pada proses data mining dapat mengurangi jumlah dan kompleksitas data. Salah satu aspek yang menyebabkan kualitas data menjadi kurang baik adalah terjadinya missing value atau terdapat data yang hilang pada dataset yang digunakan. Untuk mengantisipasi hal tersebut terlebih dahulu dilakukan pemeriksaan apakah terdapat data yang hilang (missing) atau bernilai kosong. Pemeriksaan dilakukan menggunakan fungsi pada python yaitu df.isnull()."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1547,6 +1583,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-9M2idMb4H0S"
+      },
+      "source": [
+        "Adapun hasil yang didapatkan dari pemeriksaan tersebut adalah bahwa pada dataset yang digunakan tidak terdapat missing value."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "owrKETW24Jij"
+      },
+      "source": [
+        "Berikutnya kita menggunakan visualisasi data dengan memanfaatkan fungsi hist untuk menampilkan histogram untuk semua atribut. Histogram dalam tampilan bentuk grafis akan menunjukkan distribusi data secara visual atau seberapa sering suatu nilai yang berbeda itu terjadi dalam suatu kumpulan data (dataframe). Histogram menunjukkan distribusi data dengan memplot frekuensi kejadian dalam suatu rentang. Tampilan histogram berikut berbeda dengan yang sebelumnya, karena terdapat penambahan fitur sebagai akibat dari transformasi fitur yang dilakukan."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1574,6 +1628,24 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p1G5mWlO4S0E"
+      },
+      "source": [
+        "Berdasarkan hasil histogram yang ditunjukkan pada output tersebut, kita dapat melihat terdapat lebih banyak atribut yang memiliki nilai yang bervariasi, seperti typeppk_B,typeppk_C, kdck, label, dst . Namun persebaran atau distribusi data tidak tersebar secara konsisten dan tidak seimbang."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hiEmITNR4XaD"
+      },
+      "source": [
+        "Pada tahap ini, akan dilakukan pengecekan keterkaitan setiap fitur pada data yang digunakan. Keterkaitan (korelasi) tersebut dapat dilihat dengan memvisualisasikan data menggunakan heatmap ataupun scatter plot. Tampilan correlation heatmap berikut berbeda dengan yang sebelumnya, karena terdapat penambahan fitur sebagai akibat dari transformasi fitur yang dilakukan."
       ]
     },
     {
@@ -1614,6 +1686,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vojN20-x4gf5"
+      },
+      "source": [
+        "Pada tahap ini, atribut yang sebelumnya memiliki nilai =1 (tidak memiliki korelasi dengan fitur lain) yaitu dx2_koo_k93, dx2_u00_u99 dan procv00_v89, telah teratasi. Semua fitur dalam data telah berkorelasi satu sama lain dengan tingkat ketergantungan yang berbeda. Semakin terang warna dari relasi antar fitur maka semakin kuat pengaruh atribut satu sama lain."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1623,8 +1704,6 @@
         "outputId": "674fd03a-9196-46d4-e301-4d7f5569a7fd"
       },
       "source": [
-        "\n",
-        "\n",
         "# data.drop(['label'], axis=1, inplace=True)\n",
         "X = bpjs_data_final.iloc[:,:-1].values\n",
         "y = bpjs_data_final.iloc[:, -1].values\n",
@@ -1666,6 +1745,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vK6POjgu4sSS"
+      },
+      "source": [
+        "Penerapan standarisasi berfokus pada mengubah data mentah menjadi informasi yang dapat digunakan sebelum dianalisis. Merupakan teknik yang menskalakan data sehingga memiliki mean = 0 dan standar deviasi =1. Standarisasi dilakukan dengan menggunakan fungsi standardscaler dan diperoleh hasil standarisasi sebagai berikut."
+      ]
     },
     {
       "cell_type": "code",
@@ -1723,6 +1811,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dltzEvlj40pK"
+      },
+      "source": [
+        "Selanjutnya data dibagi menjadi 2 bagian, yaitu data latih sebanyak 70% dan data uji sebanyak 30% dengan potongan kode dibawah ini. Data latih digunakan dalam membangun model dan data uji akan digunakan dalam menguji akurasi model yang telah dibangun."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8-NRa6ZrTJIg",
@@ -1756,7 +1853,16 @@
         "id": "XYKQB5t8ee02"
       },
       "source": [
-        ""
+        "Pembagian data berhasil dilakukan sehingga diperoleh data latih sebesar 140151 dan data uji sebesar 119"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2REh4q055IZj"
+      },
+      "source": [
+        "Pemodelan akan dilakukan dengan menggunakan algoritma Random Forest Classifier (RFC), dengan library sklearn. Adapun pembuatan model RFC dapat dilakukan dengan potongan kode dibawah ini."
       ]
     },
     {
@@ -1776,6 +1882,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m9n_Pn_Q5LIU"
+      },
+      "source": [
+        "Kemudian dilakukan pengecekan score akurasi dari data latih dan data uji yang dimiliki dengan potongan code berikut"
+      ]
     },
     {
       "cell_type": "code",
@@ -1813,6 +1928,17 @@
       },
       "source": [
         "## TUNING HYPERPARAMETERS\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W9Ed56LM55n8"
+      },
+      "source": [
+        "Hyperparameter tuning adalah proses untuk menemukan nilai hyperparameter. Tujuannya adalah untuk menemukan nilai hyperparameter yang dapat menghasilkan model dengan performa yang paling baik.\n",
+        "\n",
+        "Pada tahap ini, dilakukan pendefinisian informasi mengenai n_estimators, max_features, max_depth, min_samples_split, min_samples_leaf, dan bootstrap"
       ]
     },
     {
@@ -1857,6 +1983,15 @@
             "{'n_estimators': [20, 65, 110, 155, 200], 'max_features': ['auto', 'sqrt'], 'max_depth': [10, 15, 20, None], 'min_samples_split': [2, 5, 10], 'min_samples_leaf': [1, 2, 4], 'bootstrap': [True, False]}\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OUICLgUz6VSb"
+      },
+      "source": [
+        "Kemudian untuk penentuan hyperparameters terbaik, dilakukan dengan menggunakan grid acak pada model.Untuk itu terlebih dahulu dilakukan pembuatan model dasar, kemudian menggunakan 3 fold cross validation dan pencarian parameter dengan sekitar 100 kombinasi berbeda untuk kemudian disesuaikan dengan model."
       ]
     },
     {
@@ -1909,6 +2044,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WrEEXEHY6Jkq"
+      },
+      "source": [
+        "Kemudian model prediksi rfc yang dihasilkan dipetakan dalam variabel baru yang berna,a rfc_predict_tunning"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "USKMnG5t1e1r"
@@ -1918,6 +2062,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uMAsePE75e_a"
+      },
+      "source": [
+        "Kemudian kembali dilakukan pengecekan score akurasi dari data latih dan data uji yang dimiliki setelah dilakukan parameter tuning dan diperoleh hasil sebagai berikut: "
+      ]
     },
     {
       "cell_type": "code",
@@ -1958,6 +2111,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_8o5wZ2f7Ygj"
+      },
+      "source": [
+        "Pada tahap ini akan dilakukan evaluasi terhadap model yang telah dibangun. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8LdaRUQL3wIW"
@@ -1967,6 +2129,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6cjyBZHU7d0r"
+      },
+      "source": [
+        "Terlebih dahulu dilakukan pengecekan hasil/ score akurasi yang dipetakan dalam sebuah matrik. Disini, kami menggunakan confusion matrix untuk itu terlebih dahulu perlu dilakukan pengimportan library untuk matriks Dan hasil dari Confusion Matrix, Classification Report, All AUC Scores, dan Mean AUC Score adalah sebagai berikut"
+      ]
     },
     {
       "cell_type": "code",
@@ -2021,6 +2192,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QGBuXL1-7kMK"
+      },
+      "source": [
+        "Evaluasi dilakukan dengan menggunakan algoritma RFC dimana predicted label dan true label dibandingkan atau dilihat korelasinya melalui visualisasi heatmap."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -2069,6 +2249,15 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7FNy8v5f71sq"
+      },
+      "source": [
+        "Karena penelitian ini merupakan binary classification, maka output akhir dari pemodelan ini adalah binary [0, 1]. Berdasarkan heatmap yang diperoleh dapat dilihat bahwa, predicted label dengan true label antara nilai [0, 0] dan [1, 1] menunjukkan korelasi yang baik (berwarna terang = 30000). Sedangkan predicted label dengan true label antara nilai [0, 1] dan [1, 0] menunjukkan korelasi yang buruk (berwarna gelap = 0)"
       ]
     },
     {
@@ -2122,6 +2311,15 @@
       },
       "source": [
         "# SAVING MODEL"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hxB_MFK076E7"
+      },
+      "source": [
+        "Semua tahap diatas mulai dari data understanding, data preparation, pemodelan dan evaluasi kemudian disimpan dalam sebuah file bernama `model.sav` untuk kemudian dapat disimpan dalam lokal pengguna dan digunakan dalam development"
       ]
     },
     {
